# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\V1\ConsultarComprobanteController;
+use App\Http\Controllers\Api\V1\DescargarRideController;
 use App\Http\Controllers\Api\V1\EmitirComprobanteController;
 use Illuminate\Support\Facades\Route;
 
@@ -10,4 +11,7 @@ Route::prefix('v1')->group(function () {
 
     Route::get('comprobantes/{comprobante}', ConsultarComprobanteController::class)
         ->name('api.v1.comprobantes.mostrar');
+
+    Route::get('comprobantes/{comprobante}/ride', DescargarRideController::class)
+        ->name('api.v1.comprobantes.ride');
 });
